2005-04-11  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_md_algos): Added: GCRY_MD_WHIRLPOOL.
	* cipher.h (_gcry_digest_spec_whirlpool): Declare.

2005-03-30  Moritz Schulte  <moritz@g10code.com>

	* libgcrypt.vers: Added: gcry_ac_io_init, gry_ac_io_init_va.

	* gcrypt.h (gcry_ac_data_read_cb_t, gcry_ac_data_write_cb_t,
	gcry_ac_io_mode_t, gcry_ac_io_type_t, gcry_ac_io_t): New types.
	(gcry_ac_io_init_va): Declare function.
	(gcry_ac_data_encode, gcry_ac_data_decode,
	gcry_ac_data_encrypt_scheme, gcry_ac_data_decrypt_scheme,
	gcry_ac_data_sign_scheme, gcry_ac_data_verify_scheme): Use
	gcry_ac_io_type_t objects instead of memory strings directly.

2005-03-03  Moritz Schulte  <moritz@g10code.com>

	* libgcrypt.vers: Added: gcry_ac_data_to_sexp() and
	gcry_ac_data_from_sexp().

2005-02-22  Werner Koch  <wk@g10code.com>

	* global.c (_gcry_malloc): Make sure ERRNO is set if we return
	NULL.  Remove unneeded initialization of M to allow the compiler
	to catch errors.
	(gcry_realloc): Make sure ERRNO is set if we return NULL>

2005-02-13  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Declare new functions: gcry_ac_data_encrypt_scheme,
	gcry_ac_data_decrypt_scheme, gcry_ac_data_sign_scheme,
	gcry_ac_data_verify_scheme, gcry_ac_data_encode,
	gcry_ac_data_decode, gcry_ac_data_to_sexp, gcry_ac_data_from_sexp.
	New types: gcry_ac_emsa_pkcs_v1_5_t, gcry_ac_ssa_pkcs_v1_5_t,
	gcry_md_algo_t.
	New enumeration lists: gcry_ac_scheme_t, gcry_ac_em_t.
	* libgcrypt.vers: Added new ac functions.
	* g10lib.h: Declare function: _gcry_pk_get_elements.
	* mpi.h (mpi_get_ui): New macro.
	Declare function: _gcry_mpi_get_ui.

2004-11-09  Werner Koch  <wk@g10code.com>

	* gcrypt.h: Removed 3 trailing commas from enums.  Noted by Heiko
	Stamer.

2004-09-21  Werner Koch  <wk@g10code.de>

	* sexp.c (sexp_sscan): Removed C++ style comments.  Noted by Yoann
	Vandoorselaere.

2004-08-23  Moritz Schulte  <moritz@g10code.com>

	* global.c: Do not include <assert.h>. 