@@ -1,3 +1,9 @@
+2005-04-14  Werner Koch  <wk@g10code.com>
+
+	* sexp.c (whitespacep): New.
+	(sexp_sscan): Replaced isdigit and isspace by whitespacep and
+	digitp.
+
 2005-04-11  Moritz Schulte  <moritz@g10code.com>
 
 	* gcrypt.h (gcry_md_algos): Added: GCRY_MD_WHIRLPOOL.
